# cloud-instance-scheduler

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.deploy.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
alembic/: env.py
alembic/versions/: 6b528a46f0a5_initial_schema.py
app/: logging_config.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: audit_logs.py  auth.py  calculator.py  cloud_accounts.py  executions.py  mfa.py  organizations.py  overrides.py  policies.py  pricing_jobs.py  providers.py  resources.py  savings.py  system.py  users.py
app/core/: config.py  jwt.py  security.py  version.py
app/db/: session.py
app/models/: __init__.py  apikey.py  audit_log.py  cloud_account.py  execution.py  override.py  policy.py  pricing.py  pricing_job.py  resource.py  resource_state_event.py  user.py
app/providers/: README.md  __init__.py  aws_ec2.py  azure_vm.py  base.py  gcp_compute.py  models.py
app/schemas/: __init__.py  apikey.py  audit_log.py  auth.py  calculator.py  cloud_account.py  execution.py  override.py  policy.py  pricing_job.py  resource.py  savings.py  user.py
app/scripts/: update_pricing.py
app/services/: analytics.py  audit.py  cost_calculator.py  discovery.py  encryption.py  policy_engine.py  pricing_fetcher.py  reconciliation.py  schedule.py  scheduler.py
docs-site/: docusaurus.config.ts  package-lock.json  package.json
docs-site/docs/: cloud-providers.md  contributing-provider.md  deployment.md  executions.md  getting-started.md  intro.md  overrides.md  pricing-and-savings.md  scheduling.md  testing.md
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
frontend/: .dockerignore  Dockerfile.deploy  Dockerfile.dev  Dockerfile.prod  eslint.config.js  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/api/: client.ts  errors.ts
frontend/src/lib/api/endpoints/: apiKeys.ts  auth.ts  calculator.ts  cloudAccounts.ts  executions.ts  mfa.ts  organizations.ts  overrides.ts  policies.ts  pricingJobs.ts  providers.ts  resources.ts  savings.ts  system.ts  users.ts
frontend/src/lib/components/layout/: Sidebar.svelte
frontend/src/lib/components/policy/: CronScheduleInput.svelte  ResourceSelector.svelte  ScheduleGrid.svelte  TimezoneSelect.svelte
frontend/src/lib/components/ui/: Badge.svelte  Button.svelte  Card.svelte  Input.svelte  LogoOrbit.svelte  Select.svelte  StatCard.svelte  Timeline.svelte
frontend/src/lib/stores/: auth.ts  providers.ts  system.ts
frontend/src/lib/types/: api.ts  apiKey.ts  calculator.ts  cloudAccount.ts  execution.ts  organization.ts  override.ts  policy.ts  resource.ts  savings.ts  user.ts
frontend/src/lib/utils/: toast.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/bootstrap/: +page.svelte
frontend/src/routes/calculator/: +page.svelte
frontend/src/routes/executions/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/overrides/: +page.svelte
frontend/src/routes/policies/: +page.svelte
frontend/src/routes/policies/[id]/: +page.svelte
frontend/src/routes/policies/new/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/resources/: +page.svelte
frontend/src/routes/resources/[id]/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/static/: logo-preview.html
tests/: conftest.py
tests/integration/: conftest.py  test_api_keys.py  test_bootstrap.py  test_cascade_delete.py  test_cloud_accounts.py  test_executions.py  test_jwt_auth.py  test_mfa.py  test_organizations.py  test_overrides.py  test_policies.py  test_profile.py  test_resources.py  test_security.py  test_users.py
tests/providers/: conftest.py  test_aws_ec2.py  test_azure_vm.py  test_gcp_compute.py
tests/services/: conftest.py  test_analytics.py  test_cost_calculator.py  test_discovery.py  test_policy_engine.py  test_pricing_fetcher.py  test_reconciliation.py  test_scheduler_pricing.py
tests/unit/: conftest.py  test_api_key_schema.py  test_cost_stopped_hours.py  test_encryption.py  test_normalize_state.py  test_policy_applies.py  test_provider_factory.py  test_schedule.py  test_security.py
