[tool.poetry]
name = "cloud-instance-scheduler"
version = "1.0.0"
description = "Cloud Instance Scheduler (CIS) - A multi-tenant, self-hosted application to schedule compute instances across AWS, Azure, and GCP."
authors = ["Antigravity <antigravity@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.1.0"
apscheduler = "^3.10.4"
boto3 = "^1.34.0"
google-cloud-compute = "^1.15.0"
azure-mgmt-compute = "^30.0.0"
azure-identity = "^1.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.31.0"
cryptography = "^46.0.4"
pytz = "^2025.2"
greenlet = "^3.3.1"
ijson = "^3.4.0.post0"
croniter = "^6.0.0"
slowapi = "^0.1.9"
pyotp = "^2.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
pytest-cov = "^7.0.0"
httpx = "^0.27"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
autopep8 = "^2.3.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=pytest-results.xml",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
