[tool.poetry]
name = "cloud-instance-scheduler"
version = "1.0.0"
description = "Cloud Instance Scheduler (CIS) - A multi-tenant, self-hosted application to schedule compute instances across AWS, Azure, and GCP."
authors = ["Antigravity <antigravity@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.135.3,<0.137.0"
uvicorn = {extras = ["standard"], version = ">=0.44,<0.47"}
sqlalchemy = "^2.0.49"
alembic = "^1.13.1"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.1.0"
apscheduler = "^3.10.4"
boto3 = "^1.42.83"
google-cloud-compute = "^1.47.0"
azure-mgmt-compute = ">=37.2,<39.0"
azure-identity = "^1.25.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
requests = "^2.33.1"
cryptography = ">=46.0.4,<48.0.0"
pytz = "^2026.1"
greenlet = "^3.3.1"
ijson = "^3.4.0.post0"
croniter = "^6.2.2"
slowapi = "^0.1.9"
pyotp = "^2.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.1.0"
httpx = "^0.28"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
autopep8 = "^2.3.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=pytest-results.xml",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
